_versions/3.33/guides/_attributes.adoc
// Common attributes.
// --> No blank lines (it ends the document header)
:project-name: Quarkus
:quarkus-version: 3.33.3.3
:quarkus-platform-groupid: io.quarkus.platform
// .
:maven-version: 3.9.12
:graalvm-version: for JDK 21
:graalvm-docs-version: jdk21
:graalvm-flavor: jdk-21
:mandrel-flavor: jdk-21
:surefire-version: 3.5.4
:gradle-version: 9.3.1
:db2-image: icr.io/db2_community/db2:12.1.0.0
:mariadb-image: docker.io/library/mariadb:12.1
:mssql-image: mcr.microsoft.com/mssql/server:2022-latest
:mysql-image: docker.io/library/mysql:9.5
:oracle-image: docker.io/gvenzl/oracle-free:23-slim-faststart
:postgres-image: docker.io/library/postgres:18
:elasticsearch-version: 9.2.2
:elasticsearch-image: docker.io/elastic/elasticsearch:9.2.2
:opensearch-image: docker.io/opensearchproject/opensearch:3.4.0
:infinispan-version: ${infinispan.version}
:infinispan-protostream-version: ${infinispan.protostream.version}
:logstash-image: docker.io/elastic/logstash:9.2.2
:kibana-image: docker.io/elastic/kibana:9.2.2
:keycloak-image: quay.io/keycloak/keycloak:26.5.7
:amqp-image: quay.io/artemiscloud/activemq-artemis-broker:1.0.25
:apicurio-registry-image: quay.io/apicurio/apicurio-registry:3.1.7
:narayana-lra-image: quay.io/jbosstm/lra-coordinator:latest
:mongo-image: docker.io/library/mongo:7.0
:rabbitmq-image: docker.io/library/rabbitmq:3.12-management
:pulsar-image: docker.io/apachepulsar/pulsar:3.2.4
:redis-image: docker.io/library/redis:7
:infinispan-image: quay.io/infinispan/server:latest
:jandex-version: 3.5.3
:jandex-gradle-plugin-version: 2.3.0
:kotlin-version: 2.3.10
:grpc-version: 1.81.0
:protoc-version: 4.33.2
:gcf-invoker-version: 2.0.0
// Cannot simply use the name 'hibernate-*-version' here as it somehow gets
// overridden to the full version, at least when building locally.
:hibernate-orm-version-major-minor: 7.2
:hibernate-search-version-major-minor: 8.2
:hibernate-validator-version-major-minor: 9.1
:jakarta-persistence-version-major-minor: 3.2
:jakarta-data-version-major-minor: 1.0
// .
:quarkus-home-url: https://quarkus.io
:quarkus-org-url: https://github.com/quarkusio
:quarkus-site-getting-started: /get-started
:quarkus-writing-extensions-guide: /guides/writing-extensions
:quarkus-site-publications: /publications
:quarkus-base-url: https://github.com/quarkusio/quarkus
:quarkus-clone-url: https://github.com/quarkusio/quarkus.git
:quarkus-archive-url: https://github.com/quarkusio/quarkus/archive/main.zip
:quarkus-blob-url: https://github.com/quarkusio/quarkus/blob/main
:quarkus-tree-url: https://github.com/quarkusio/quarkus/tree/main
:quarkus-issues-url: https://github.com/quarkusio/quarkus/issues
:quarkus-images-url: https://github.com/quarkusio/quarkus-images
:quarkus-chat-url: https://quarkusio.zulipchat.com
:quarkus-mailing-list-subscription-email: quarkus-dev+subscribe@googlegroups.com
:quarkus-mailing-list-index: https://groups.google.com/d/forum/quarkus-dev
:quickstarts-base-url: https://github.com/quarkusio/quarkus-quickstarts
:quickstarts-clone-url: https://github.com/quarkusio/quarkus-quickstarts.git
:quickstarts-archive-url: https://github.com/quarkusio/quarkus-quickstarts/archive/main.zip
:quickstarts-blob-url: https://github.com/quarkusio/quarkus-quickstarts/blob/main
:quickstarts-tree-url: https://github.com/quarkusio/quarkus-quickstarts/tree/main
// .
:hibernate-orm-docs-url: https://docs.hibernate.org/orm/{hibernate-orm-version-major-minor}/userguide/html_single/
:hibernate-orm-javadocs-url: https://docs.hibernate.org/orm/{hibernate-orm-version-major-minor}/javadocs/
:hibernate-orm-dialect-docs-url: https://docs.hibernate.org/orm/{hibernate-orm-version-major-minor}/dialect/dialect.html
:hibernate-search-docs-url: https://docs.hibernate.org/search/{hibernate-search-version-major-minor}/reference/en-US/html_single/
:hibernate-validator-docs-url: https://docs.hibernate.org/validator/{hibernate-validator-version-major-minor}/reference/en-US/html_single/
:jakarta-persistence-spec-url: https://jakarta.ee/specifications/persistence/{jakarta-persistence-version-major-minor}/jakarta-persistence-spec-{jakarta-persistence-version-major-minor}
:jakarta-persistence-javadocs-url: https://jakarta.ee/specifications/persistence/{jakarta-persistence-version-major-minor}/apidocs/jakarta.persistence/
:jakarta-data-spec-url: https://jakarta.ee/specifications/data/{jakarta-data-version-major-minor}/jakarta-data-{jakarta-data-version-major-minor}
// .
:amazon-services-guide: https://docs.quarkiverse.io/quarkus-amazon-services/dev/index.html
:config-consul-guide: https://docs.quarkiverse.io/quarkus-config-extensions/dev/consul.html
:hibernate-search-orm-elasticsearch-aws-guide: https://docs.quarkiverse.io/quarkus-hibernate-search-extras/dev/index.html
:neo4j-guide: https://docs.quarkiverse.io/quarkus-neo4j/dev/index.html
:vault-guide: https://docs.quarkiverse.io/quarkus-vault/dev/index.html
:vault-datasource-guide: https://docs.quarkiverse.io/quarkus-vault/dev/vault-datasource.html
:micrometer-registry-guide: https://docs.quarkiverse.io/quarkus-micrometer-registry/dev/index.html
:quarkus-migration-guide: https://github.com/quarkusio/quarkus/wiki/Migration-Guides[Migration Guides]
:quarkus-tls-registry-reference-guide: TLS registry reference
// .
:create-app-group-id: org.acme
:create-cli-group-id: {create-app-group-id}
// Attributes required for single-sourcing to downstream.
:jdk-version-earliest: 17
:jdk-version-other: 21
:jdk-version-latest: 25
:jdk-version-all: 17, 21, or 25
:openshift-long: OpenShift
:openshift: OpenShift
:name-image-ubi9-open-jdk-17: registry.access.redhat.com/ubi9/openjdk-17
:name-image-ubi9-open-jdk-17-short: ubi9/openjdk-17
:name-image-ubi9-open-jdk-21: registry.access.redhat.com/ubi9/openjdk-21
:name-image-ubi9-open-jdk-21-short: ubi9/openjdk-21
:name-image-ubi9-open-jdk-25: registry.access.redhat.com/ubi9/openjdk-25
:name-image-ubi9-open-jdk-25-short: ubi9/openjdk-25
// .
include::_attributes-local.adoc[]
